--- a/first.ipynb
+++ b/first.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
@@ -36,7 +44,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "from zipfile import ZipFile\n",
+    "file_name = \"data/train.zip\"\n",
+    "with ZipFile(file_name, 'r') as zip:\n",
+    "  zip.extractall()\n",
+    "  print('done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,88 +132,382 @@
        "4   5      0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import glob\n",
-    "\n",
     "df = pd.read_csv('data/train.csv')\n",
     "test_data = pd.read_csv('data/test.csv')\n",
     "submission = pd.read_csv('data/sample_submission.csv')\n",
-    "df.head()\n",
-    "\n",
-    "path=\"data/\"\n",
-    "im_file=os.listdir(path)\n",
-    "im_file=natsort.natsorted(im_file)"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 64,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-4d2f2c6230e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mimage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mimg_to_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mnumber\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRAIN_DIR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mcateg_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mnumber\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcateg_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [00:12<00:00, 4796.73it/s]\n"
      ]
     }
    ],
    "source": [
     "TRAIN_DIR = 'train'\n",
-    "labels=[]\n",
     "\n",
-    "IMG_SIZE=28\n",
+    "IMG_SIZE=24\n",
     "data=[]\n",
-    "for i in range(30000):\n",
-    "    path = os.path.join(TRAIN_DIR,os.listdir(TRAIN_DIR)[i])\n",
+    "labels_240=[]\n",
+    "i = 0\n",
+    "for img in tqdm(os.listdir(TRAIN_DIR)):\n",
+    "    path = os.path.join(TRAIN_DIR,img)\n",
     "    img_data = cv2.imread(path)\n",
     "    img_data = cv2.resize(img_data, (IMG_SIZE,IMG_SIZE))\n",
     "    image=img_to_array(img_data)\n",
-    "    data.append(image)\n",
-    "    number = int(os.listdir(TRAIN_DIR)[i][:-4])  \n",
-    "    categ_num = int(df[df.id==number].label)\n",
-    "    labels.append(categ_num)"
+    "    data.append(image)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_classes=len(np.unique(labels))\n",
-    "data=np.array(data,dtype=\"float32\")/255.0\n",
-    "labels=np.array(labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'labels' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-0a1df294b701>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlabels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'labels' is not defined"
+     "data": {
+      "text/plain": [
+       "(24, 24, 3)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [00:59<00:00, 1010.67it/s]\n"
      ]
     }
    ],
    "source": [
-    "labels"
+    "labels_240=[]\n",
+    "for img in tqdm(os.listdir(TRAIN_DIR)):\n",
+    "    number = int(img[:-4])  \n",
+    "    categ_num = int(df[df.id==number].label)\n",
+    "    labels_240.append(categ_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_classes=len(np.unique(labels_240))\n",
+    "data=np.array(data,dtype=\"float32\")/255.0\n",
+    "labels_240=np.array(labels_240)\n",
+    "lb=LabelBinarizer()\n",
+    "labels_240=lb.fit_transform(labels_240)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datagen = ImageDataGenerator(zoom_range = 0.1,\n",
+    "                            height_shift_range = 0.1,\n",
+    "                            width_shift_range = 0.1,\n",
+    "                            rotation_range = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model=Sequential()\n",
+    "model.add(Conv2D(32,(3,3),padding=\"same\",activation=\"linear\",input_shape=(24,24,3)))\n",
+    "model.add(LeakyReLU(alpha=0.1))\n",
+    "model.add(BatchNormalization(axis=-1))\n",
+    "model.add(MaxPooling2D(pool_size=(3,3)))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
+    "model.add(Conv2D(32,(3,3),padding=\"same\",activation=\"linear\"))\n",
+    "model.add(LeakyReLU(alpha=0.1))\n",
+    "model.add(BatchNormalization(axis=-1))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "model.add(Dropout(0.2))\n",
+    "\n",
+    "model.add(Conv2D(64,(3,3),activation='relu'))\n",
+    "model.add(Conv2D(64,(3,3),padding=\"same\",activation=\"linear\"))\n",
+    "model.add(LeakyReLU(alpha=0.1))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
+    "model.add(Conv2D(128,(3,3),padding=\"same\",activation=\"linear\"))\n",
+    "model.add(LeakyReLU(alpha=0.1))\n",
+    "model.add(BatchNormalization(axis=-1))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "model.add(Conv2D(128,(3,3),padding=\"same\",activation=\"relu\"))\n",
+    "model.add(BatchNormalization(axis=-1))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(1024,activation=\"linear\"))\n",
+    "model.add(LeakyReLU(alpha=0.1))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(10\n",
+    "                ,activation=\"softmax\"))\n",
+    "\n",
+    "model.compile(loss='categorical_crossentropy', optimizer = Adam(lr=1e-4), metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train,x_test,y_train,y_test=model_selection.train_test_split(data,labels_240,test_size=0.25,random_state=47)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 3240000 into shape (240,240,3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-72-bd66657df087>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m240\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m240\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mx_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx_test\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m240\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m240\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 3240000 into shape (240,240,3)"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "x_train = np.array([i[0] for i in x_train]).reshape(-1,240,240,3)\n",
+    "x_test = np.array([i[0] for i in x_test]).reshape(-1,240,240,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45000"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "45000"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15000"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15000"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "  len(x_train)\n",
+    "  len(y_train)\n",
+    "  len(y_test)\n",
+    "  len(x_test)\n",
+    "  print('')\n",
+    "  len(x_train[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_19 (Conv2D)           (None, 24, 24, 32)        896       \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_16 (LeakyReLU)   (None, 24, 24, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_16 (Batc (None, 24, 24, 32)        128       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_10 (MaxPooling (None, 8, 8, 32)          0         \n",
+      "_________________________________________________________________\n",
+      "dropout_16 (Dropout)         (None, 8, 8, 32)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_20 (Conv2D)           (None, 8, 8, 32)          9248      \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_17 (LeakyReLU)   (None, 8, 8, 32)          0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_17 (Batc (None, 8, 8, 32)          128       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_11 (MaxPooling (None, 4, 4, 32)          0         \n",
+      "_________________________________________________________________\n",
+      "dropout_17 (Dropout)         (None, 4, 4, 32)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_21 (Conv2D)           (None, 2, 2, 64)          18496     \n",
+      "_________________________________________________________________\n",
+      "conv2d_22 (Conv2D)           (None, 2, 2, 64)          36928     \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_18 (LeakyReLU)   (None, 2, 2, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "dropout_18 (Dropout)         (None, 2, 2, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_23 (Conv2D)           (None, 2, 2, 128)         73856     \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_19 (LeakyReLU)   (None, 2, 2, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_18 (Batc (None, 2, 2, 128)         512       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_12 (MaxPooling (None, 1, 1, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_24 (Conv2D)           (None, 1, 1, 128)         147584    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_19 (Batc (None, 1, 1, 128)         512       \n",
+      "_________________________________________________________________\n",
+      "dropout_19 (Dropout)         (None, 1, 1, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_4 (Flatten)          (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 1024)              132096    \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_20 (LeakyReLU)   (None, 1024)              0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_20 (Batc (None, 1024)              4096      \n",
+      "_________________________________________________________________\n",
+      "dropout_20 (Dropout)         (None, 1024)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_8 (Dense)              (None, 10)                10250     \n",
+      "=================================================================\n",
+      "Total params: 434,730\n",
+      "Trainable params: 432,042\n",
+      "Non-trainable params: 2,688\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aug=ImageDataGenerator(rotation_range=25,width_shift_range=0.1,height_shift_range=0.1,shear_range=0.2,horizontal_flip=True,fill_mode=\"nearest\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint=ModelCheckpoint(filepath='data/model_best2.hdf5',\n",
+    "                           save_best_only=True,verbose=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1\n",
+      "704/703 [==============================] - 62s 89ms/step - loss: 0.6914 - acc: 0.7384 - val_loss: 0.5404 - val_acc: 0.7860\n",
+      "\n",
+      "Epoch 00001: val_loss improved from 0.55968 to 0.54038, saving model to data/model_best2.hdf5\n"
+     ]
+    }
+   ],
+   "source": [
+    "train=model.fit_generator(aug.flow(x_train,y_train,batch_size=64),validation_data=(x_test,y_test),\n",
+    "                          steps_per_epoch=len(x_train)/64,epochs=1,verbose=1,callbacks=[checkpoint])"
    ]
   },
   {
